objects/Lead_Assessment_Action__c.object
<CustomObject>
    <fields>
        <fullName>Lead_Assessment_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Assessment Rule</label>
        <referenceTo>Lead_Assessment_Rule__c</referenceTo>
        <relationshipLabel>Lead Assessment Actions</relationshipLabel>
        <relationshipName>Lead_Assessment_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Field_Value__c</fullName>
        <label>Lead Field Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Field__c</fullName>
        <label>Lead Field (API Name)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Lead Assessment Action</label>
    <nameField>
        <label>Lead Assessment Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Assessment Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>